Updates from Overleaf

--- a/cuestionario3.tex
+++ b/cuestionario3.tex
@@ -5,6 +5,7 @@
 
 \begin{document}
 \genTitle
+\genAdvice
 
 \begin{question}
 ¿Cuántas posibles hipótesis podemos representar mediante árboles de decisión si tenemos $n$ atributos binarios?
