--- a/cuestionario2.tex
+++ b/cuestionario2.tex
@@ -5,6 +5,7 @@
 
 \begin{document}
 \genTitle
+\genAdvice
 
 \begin{problem}
 Sea $X$ un universo y $D$ un conjunto de entrenamiento sobre $X$. Sean $E^+ = \{ x \in X |(x, 1) \in D \}$ y $E^- = \{x \in X |(x, 0) \in D\}$. Sea $H$ el conjunto de hipótesis que contiene a todas las hipótesis sobre $X$. Sea $VS$ el espacio de versiones para $ \langle D, H \rangle$. Sea $x_0 \in X$ tal que $x_0 \not\in E^+ \cup E^- $ y sea $h \in VS$ tal que $h(x_0) = 0$. Demostrar que existe $h' \in VS$ tal que $h'(x_0) = 1$.
